--- a/public/stat120/Day16.Rmd
+++ b/public/stat120/Day16.Rmd
@@ -509,33 +509,6 @@ z=\frac{\text { sample statistic }-\text { null value }}{\text { SE }}
 
 ---
 
-<br>
-<br>
-
-# Proportion of infected?
-
-.bql.font90[
-- All mosquitoes in the infected group were exposed to the malaria parasites, but not all mosquitoes were actually infected
-- Of the 201 mosquitoes in the infected group that we actually have data on, only 90 were actually infected $(90 / 201=0.448)$
-- What proportion of mosquitoes eating from a malaria infected mouse become infected?
-]
-
---
-
-.out-t[We want a confidence interval!]
-
----
-
-# Bootstrap Interval
-
-
-<center>
-<img src="images/bootstrap_mosquito.png" width="70%" height="70%"> 
-</center>
-
-
----
-
 class: middle
 
 # Connecting Normal model to Confidence Intervals
@@ -670,7 +643,7 @@ class: action
 
 <br>
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
