--- a/public/stat120/Day18.Rmd
+++ b/public/stat120/Day18.Rmd
@@ -578,7 +578,7 @@ class: action
 .pull-right-60[
 <br>
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
