--- a/static/stat120/Day17.Rmd
+++ b/static/stat120/Day17.Rmd
@@ -455,7 +455,7 @@ class: action
 .pull-right-60[
 <br>
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
@@ -463,5 +463,5 @@ class: action
 
 ]
 
-`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 20, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
